--- a/GoogleTop10/settings.gradle
+++ b/GoogleTop10/settings.gradle
@@ -1,2 +1,7 @@
+include ':presentation'
+include ':entity'
+include ':domain'
+include ':data'
+include ':connector'
 include ':app'
 rootProject.name = "GoogleTop10"
