--- a/GoogleTop10/domain/build.gradle
+++ b/GoogleTop10/domain/build.gradle
@@ -41,6 +41,14 @@ dependencies {
     implementation project(path: ':entity')
 
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.koin:koin-test:2.1.5'
+    testImplementation 'org.koin:koin-android:2.1.5'
+    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.6"
+    testImplementation project(path: ':connector')
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
