--- a/GoogleTop10/.gitignore
+++ b/GoogleTop10/.gitignore
@@ -21,3 +21,8 @@
 /../.idea/.name
 /../.idea/jarRepositories.xml
 /../.idea/misc.xml
+/.idea/.gitignore
+/.idea/compiler.xml
+/.idea/gradle.xml
+/.idea/jarRepositories.xml
+/.idea/misc.xml
