--- a/GoogleTop10/build.gradle
+++ b/GoogleTop10/build.gradle
@@ -1,25 +1,26 @@
 buildscript {
-    ext.kotlin_version = "1.3.72"
-    ext.coroutines_version = "1.3.6"
-    ext.material_version = "1.1.0"
-    ext.appcompat_version = "1.1.0"
-    ext.constraint_version = "1.1.3"
-    ext.ktx_version = "1.3.0"
-    ext.fragment_version = "1.2.5"
-    ext.lifecycle_version = "2.2.0"
-    ext.room_version = "2.2.5"
-    ext.koin_version = "2.1.5"
+    ext.kotlin_version = "1.4.30"
+    ext.coroutines_version = "1.4.2"
+    ext.material_version = "1.3.0"
+    ext.appcompat_version = "1.2.0"
+    ext.constraint_version = "2.0.4"
+    ext.ktx_version = "1.3.2"
+    ext.fragment_version = "1.3.0"
+    ext.lifecycle_version = "2.3.0"
+    ext.lifecycle_ext_version = "2.2.0"
+    ext.room_version = "2.2.6"
+    ext.koin_version = "2.2.2"
     ext.coil_version = "0.11.0"
-    ext.retrofit_version = "2.7.2"
+    ext.retrofit_version = "2.9.0"
     ext.gson_version = "2.8.6"
-    ext.browser_version = "1.2.0"
+    ext.browser_version = "1.3.0"
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
