--- a/GoogleTop10/connector/build.gradle
+++ b/GoogleTop10/connector/build.gradle
@@ -1,15 +1,13 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -37,6 +35,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    //noinspection DifferentStdlibGradleVersion
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation project(path: ':data')
@@ -54,12 +53,12 @@ dependencies {
 
     kapt "androidx.room:room-compiler:$room_version"
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.koin:koin-test:2.1.5'
-    testImplementation 'androidx.test:core:1.2.0'
-    testImplementation "org.robolectric:robolectric:4.3.1"
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'org.koin:koin-test:2.1.6'
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation "org.robolectric:robolectric:4.4"
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
