--- a/GoogleTop10/build.gradle
+++ b/GoogleTop10/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
     ext.kotlin_version = "1.4.30"
-    ext.coroutines_version = "1.4.2"
     ext.material_version = "1.3.0"
     ext.appcompat_version = "1.2.0"
     ext.constraint_version = "2.0.4"
@@ -9,11 +8,15 @@ buildscript {
     ext.lifecycle_version = "2.3.0"
     ext.lifecycle_ext_version = "2.2.0"
     ext.room_version = "2.2.6"
+    ext.room_rx_version = "2.3.0-beta02"
     ext.koin_version = "2.2.2"
     ext.coil_version = "0.11.0"
     ext.retrofit_version = "2.9.0"
     ext.gson_version = "2.8.6"
     ext.browser_version = "1.3.0"
+    ext.rx_version = "2.2.21"
+    ext.rx_kotlin_version = "2.4.0"
+    ext.rx_android_version = "2.1.1"
 
     repositories {
         google()
